aplicar Repository pattern y configuracion dinamica de repositorio

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,4 @@ services:
     image: ${DOCKER_REGISTRY-}best-practices:${TAG:-latest}
     build:
       context: .
-      dockerfile: Best Practices/Dockerfile
+      dockerfile: Dockerfile
