--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,6 @@ services:
       - "80"
     ports:
       - "5101:80"
-    volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+    #volumes:
+    #  - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+    # - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
